# mock-interview-agent

./: .gitignore  CLAUDE.md  README.md  features.md  gemini.md  proposal.md  run-dev.sh  stop-dev.sh  storyboard.md
.agents/skills/feature-kickoff/: SKILL.md
.claude/agents/: backend-developer.md  frontend-developer.md  main-orchestrator.md  product-manager.md  ui-designer.md
.claude/commands/: dev-start.md  dev-stop.md
.claude/skills/feature-kickoff/: SKILL.md
.codex/agents/: backend-developer.toml  frontend-developer.toml  main-orchestrator.toml  product-manager.toml  ui-designer.toml
.codex/commands/: dev-start.md  dev-stop.md
backend/: README.md  agent.py  gemini.md  main.py  pyproject.toml  railway.toml  requirements.txt  tools.py
backend/tests/: test_evaluator_node_llm.py  test_rewind_route.py  test_session_policy.py
design/: README.md  gemini.md  migration.md
design/assets/mockups/: page3_question_journey_mockup.html
design/assets/redesign/: F28-sample-answer-spec.md  F29-early-termination-spec.md  F30-time-machine-spec.md  v1-redesign.html
design/specs/: page4_redesign_v1.md
frontend/: Caddyfile  Dockerfile  README.md  gemini.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: EarlyEndModal.jsx  HeroScore.jsx  PageTransition.jsx  RewindConfirmModal.jsx  TimeMachineOverlay.jsx  Toast.jsx  TopBar.jsx
frontend/src/debug/: DebugMenu.jsx  fixtures.js  (+2 more)
planning/: README.md  demo-day-tech-deck.html  deployment.md  features.md  gemini.md  proposal.md  storyboard.md  todo.md
(+7 files in other folders)
